# OOP-2nd-Course-1Lab

./: Book.cpp  Book.h  CMakeLists.txt  Linked_List.cpp  Linked_List.h  Lists.cpp  Lists.h  Literature.cpp  Literature.h  README.txt  addvalue.cpp  addvalue.h  addvalue.ui  demo.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  test.cpp
Books/headers/: Book.h  Character.h  Date.h  Global_Character.h  Literature.h
Books/sources/: Book.cpp  Character.cpp  Date.cpp  Global_Character.cpp  Literature.cpp
Data_Bases/: Books.db
GUI/: addbook.cpp  addbook.h  addbook.ui  addvalue.cpp  addvalue.h  addvalue.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
Lists/: Lists.cpp  Lists.h
Test/: gtest.cpp  test.cpp
UML_DIAGRAMS/vpp_files/: User_case.vpp  User_case.vpp.bak_000f  User_case.vpp.bak_001d  User_case.vpp.bak_002d  User_case.vpp.bak_003d  User_case.vpp.bak_004d  User_case.vpp.bak_005d  User_case.vpp.bak_006d  User_case.vpp.bak_007d  User_case.vpp.bak_008d  User_case.vpp.bak_009d  User_case.vpp.bak_010d  User_case.vpp.bak_011d  User_case.vpp.bak_012d  User_case.vpp.bak_013d
lib/googletest/: CMakeLists.txt  googletest-distribution.cbp  Новый текстовый документ.txt
lib/googletest/googlemock/: gmock.cbp
lib/googletest/googlemock/googletest/: gtest.cbp
lib/googletest/googletest/: CMakeLists.txt  gtest.cbp
lib/googletest/googletest/include/gtest/: gtest-matchers.h  gtest-param-test.h  gtest-printers.h  gtest-typed-test.h  gtest.h
lib/googletest/googletest/include/gtest/internal/: gtest-death-test-internal.h  gtest-internal.h  gtest-param-util.h  gtest-port.h  gtest-string.h
